Theoretically, added a favicon to NikoMaker

--- a/niko.html
+++ b/niko.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Niko died for your suns</title>
+		<link rel="shortcut icon" type="image/png" href="the_sun.png" />
 		<link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/ui-lightness/jquery-ui.css" />
 		<link rel="stylesheet" type="text/css" href="css/nikos.css" />
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
