--- a/niko.html
+++ b/niko.html
@@ -13,7 +13,7 @@
 		<div id="interface">
 			<div id="output">
 				<canvas id="photoshop" width="608" height="128"></canvas>
-				<img id="placeholder" width="608" height="128" src="img/niko-background.png" />
+				<img id="render" width="608" height="128" src="img/niko-background.png" />
 			</div>
 			<div id="content">
 				<label for="message">Message</label>
