Implemented automatic linebreaks for NikoMaker
I also limited the rendered lines to three, because anything extra would
run off the edge. If you exceed three (rendered) lines, the rest will be
clipped and a warning will display.

--- a/niko.html
+++ b/niko.html
@@ -17,6 +17,7 @@
 			</div>
 			<div id="content">
 				<label for="message">Message</label>
+				<p id="errortext" class="ui-state-highlight soften"><span class="ui-icon ui-icon-alert"></span>Your message is too long, only three lines of text can be rendered!</p>
 				<textarea rows="4" id="message" placeholder="What's Niko going to say?"></textarea>
 				<span class="label">Expression</span>
 				<div id="faces"></div>
