Tweaked, cleaned, and renamed JS files
I finally got everything to pass my eslint checks!

--- a/cape.html
+++ b/cape.html
@@ -5,9 +5,9 @@
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/ui-darkness/jquery-ui.css">
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-		<script type="text/javascript" src="js/cape.core.js"></script>
-		<script type="text/javascript" src="js/cape.lib.js"></script>
-		<script type="text/javascript" src="js/cape.js"></script>
+		<script type="text/javascript" src="js/cape.core.browser.js"></script>
+		<script type="text/javascript" src="js/cape.lib.browser.js"></script>
+		<script type="text/javascript" src="js/cape.browser.js"></script>
 		<style type="text/css">
 			body {
 				height: calc(100vh - 16px);
