--- a/textmunge.html
+++ b/textmunge.html
@@ -50,7 +50,7 @@
 			}
 		</style>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script type="text/javascript" src="js/textmunge.js"></script>
+		<script type="text/javascript" src="js/textmunge.browser.js"></script>
 	</head>
 	<body></body>
 </html>
