--- a/niko.html
+++ b/niko.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/nikos.css" />
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-		<script type="text/javascript" src="js/nikos.js"></script>
+		<script type="text/javascript" src="js/niko.browser.js"></script>
 	</head>
 	<body>
 		<div id="interface">
