--- a/niko.html
+++ b/niko.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Niko died for your suns</title>
+		<title>NikoMaker - Niko died for our suns</title>
 		<link rel="shortcut icon" type="image/png" href="img/favicon/niko.png" />
 		<link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/ui-lightness/jquery-ui.css" />
 		<link rel="stylesheet" type="text/css" href="css/nikos.css" />
