Added a link to the repository in the HTML files

--- a/textmunge.html
+++ b/textmunge.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+	Looking at the source? Why not check it on the open source github repository instead?
+	https://github.com/PrincessRTFM/WebUtil
+-->
 <html>
 	<head>
 		<title>TextMunge v1.2.1</title>
