--- a/cape.html
+++ b/cape.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+	Looking at the source? Why not check it on the open source github repository instead?
+	https://github.com/PrincessRTFM/WebUtil
+-->
 <html>
 	<head>
 		<title>Random Cape Generator - new and improved!</title>
