Add description tags in page comments
This is gonna be used by the index generator script I'm about to commit

--- a/textmunge.html
+++ b/textmunge.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!--
-	Looking at the source? Why not check it on the open source github repository instead?
-	https://github.com/PrincessRTFM/WebUtil
+	@desc a general-purpose text-processing framework page, for writing your own JS functionality with prebuilt text inputs
 -->
 <html>
 	<head>
