--- a/niko.html
+++ b/niko.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!--
-	Looking at the source? Why not check it on the open source github repository instead?
-	https://github.com/PrincessRTFM/WebUtil
+	@desc a point, click, and type creator for dialogue boxes featuring Niko, from the game Oneshot
 -->
 <html>
 	<head>
