--- a/r-edit.html
+++ b/r-edit.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!--
-	Looking at the source? Why not check it on the open source github repository instead?
-	https://github.com/PrincessRTFM/WebUtil
+	@desc an easy way to sort and deduplicate subreddits for creating a multireddit list
 -->
 <html>
 	<head>
