Update issue links to go direct to the templates

--- a/cape.html
+++ b/cape.html
@@ -140,9 +140,9 @@
 		<address id="contribute">
 			<a href="https://github.com/PrincessRTFM/WebUtil/issues/2">power ideas thread</a>
 			|
-			<a href="https://github.com/PrincessRTFM/WebUtil/issues/new">report a bug</a>
+			<a href="https://github.com/PrincessRTFM/WebUtil/issues/new?assignees=PrincessRTFM&labels=bug%2C+website&template=website-bug-report.md&title=Bug%3A+XXXXXXXX">report a bug</a>
 			|
-			<a href="https://github.com/PrincessRTFM/WebUtil/issues/new">request a feature</a>
+			<a href="https://github.com/PrincessRTFM/WebUtil/issues/new?assignees=PrincessRTFM&labels=enhancement%2C+website&template=website-feature-request.md&title=Request%3A+XXXXXXXX">request a feature</a>
 		</address>
 	</body>
 </html>
