--- a/dhook.html
+++ b/dhook.html
@@ -7,7 +7,7 @@
 		<title>DHook interface</title>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" type="text/css" href="css/dhook.css" />
-		<script type="text/javascript" src="js/hosted/discord.11.5.1.min.js"></script>
+		<script type="text/javascript" src="js/hosted/discord.stable.min.js"></script>
 		<script type="text/javascript" src="js/hosted/jscolor.js"></script>
 		<script type="text/javascript" src="js/dhook.browser.js"></script>
 	</head>
