Cleanup file listing index
Remove the version numbers and hide the (still) incomplete dhook.html

--- a/dhook.html
+++ b/dhook.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <!--
 	@desc a (mostly complete) visual interface for sending messages through Discord webhooks
+	@hidden
 -->
 <html>
 	<head>
-		<title>DHook interface</title>
+		<title>Discord webhook interface</title>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" type="text/css" href="css/dhook.css" />
 		<script type="text/javascript" src="js/hosted/discord.stable.min.js"></script>
