--- a/fontbox.html
+++ b/fontbox.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>FontBox v1.1.0</title>
+		<title>FontBox</title>
 		<style type="text/css">
 			body, .row, .box {
 				display: flex;
