--- a/textmunge.html
+++ b/textmunge.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>TextMunge v1.2.1</title>
+		<title>TextMunge</title>
 		<style type="text/css">
 			body, .row, .box {
 				display: flex;
