--- a/cape.html
+++ b/cape.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Random Cape Generator - new and improved!</title>
+		<title>Random Cape Generator</title>
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/ui-darkness/jquery-ui.css">
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
