--- a/r-edit.html
+++ b/r-edit.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>rEdit v1.5.0</title>
+		<title>rEdit</title>
 		<style type="text/css">
 			body, .row, .box {
 				display: flex;
