Update allagan price calculator with banking mode
Banking mode will keep ONE (1) allagan piece of whatever type in each
slot that has one. Price calculation is adjusted accordingly: stacks
count for 98 instead of 99, and the extra count will assume one less
than the value entered, without going negative.

Banking mode is designed to easily handle people like me, who hoard
allagan pieces for on-demand money. It assumes that each slot that has
an allagan piece should keep a single piece (of the current type) after
selling, in order to allow for easy "entrust to retainer" spam on any
pieces acquired while keeping a user-defined layout, such as rows or
columns, in the retainer (or other) inventory.

--- a/allagan.html
+++ b/allagan.html
@@ -5,11 +5,19 @@
 -->
 <html>
 	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<title>FFXIV Allagan Pieces Calculator</title>
 		<link rel="stylesheet" type="text/css" href="css/allagan.css" />
 	</head>
 	<body>
-		<div id="allagan"></div>
+		<div id="allagan">
+			<div id="banking-container">
+				<input type="checkbox" id="banking" name="banking" />
+				<label for="banking">
+					<abbr title="Leave one allagan piece in each slot that has one, as if using a retainer to hold a 'bank' of pieces">Toggle banking mode</abbr>
+				</label>
+			</div>
+		</div>
 		<div id="output">You can sell your allagan pieces for <span id="gil">0</span> gil</div>
 		<script type="text/javascript" src="js/allagan.browser.js"></script>
 	</body>
