--- a/benedict.html
+++ b/benedict.html
@@ -4,62 +4,10 @@
 -->
 <html>
 	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<script type="text/javascript" src="js/lib/benedictnames.js"></script>
 		<title>What's That One Actor's Name?</title>
-		<style type="text/css">
-			body {
-				height: 100vh;
-				width: 100vw;
-				margin: auto;
-				padding: 0;
-				background-color: black;
-				color: #d0d0d0;
-				text-align: center;
-			}
-			#fuck-css {
-				position: absolute;
-				left: 50%;
-				top: 35%;
-				transform: translateX(-50%);
-				width: 100%;
-			}
-			a:link {
-				color: #a9a9a9;
-			}
-			a:visited {
-				color: #8a8a8a;
-			}
-			#header {
-				font-size: 4em;
-				margin-top: 5px;
-				margin-bottom: 7px;
-			}
-			#that-guy {
-				opacity: 0;
-				margin: 9px;
-				font-size: 6em;
-				font-style: italic;
-			}
-			#reroll {
-				font-size: 2em;
-			}
-			address {
-				position: fixed;
-				top: 3px;
-				font-size: 1.1em;
-				opacity: 0.6;
-				-moz-transition: opacity .3s ease-out;
-				-webkit-transition: opacity .3s ease-out;
-				-o-transition: opacity .3s ease-out;
-				transition: opacity .3s ease-out;
-			}
-			address:hover {
-				opacity: 1;
-			}
-			#contribute {
-				right: 3px;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="css/benedict.css" />
 	</head>
 	<body>
 		<div id="fuck-css">
