Clean cape.html
Add meta content-type tag, move inline style tag to css file

--- a/cape.html
+++ b/cape.html
@@ -4,105 +4,15 @@
 -->
 <html>
 	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<title>Random Cape Generator</title>
+		<link rel="stylesheet" href="css/cape.css">
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/ui-darkness/jquery-ui.css">
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 		<script type="text/javascript" src="js/cape.core.browser.js"></script>
 		<script type="text/javascript" src="js/cape.lib.browser.js"></script>
 		<script type="text/javascript" src="js/cape.browser.js"></script>
-		<style type="text/css">
-			body {
-				height: calc(100vh - 16px);
-				margin: 0;
-				padding: 8px;
-				background-color: black;
-				color: #d0d0d0;
-				text-align: center;
-			}
-			a:link {
-				color: #a9a9a9;
-			}
-			a:visited {
-				color: #8a8a8a;
-			}
-			#header {
-				font-size: 2.9em;
-				margin-top: 5px;
-				margin-bottom: 7px;
-			}
-			#power {
-				opacity: 0;
-				margin: 9px;
-			}
-			#power > h3 {
-				font-size: 2.1em;
-			}
-			#power > h4 {
-				font-size: 1.8em;
-			}
-			#power > h3, #power > h4 {
-				margin: 11px;
-			}
-			#footer {
-				font-size: 1.5em;
-				margin: 7px;
-			}
-			#buttons {
-				font-size: 1.2em;
-			}
-			#reroll, #tweak {
-				font-size: 1.1em;
-			}
-			address {
-				position: fixed;
-				top: 3px;
-				font-size: 1.1em;
-				opacity: 0.6;
-				-moz-transition: opacity .3s ease-out;
-				-webkit-transition: opacity .3s ease-out;
-				-o-transition: opacity .3s ease-out;
-				transition: opacity .3s ease-out;
-			}
-			address:hover {
-				opacity: 1;
-			}
-			#credit {
-				left: 3px;
-			}
-			#contribute {
-				right: 3px;
-			}
-			#category {
-				color: #ffcdcd;
-			}
-			#ability {
-				color: #bbffcc;
-			}
-			.detail {
-				color: #00f5ff;
-				cursor: help;
-			}
-			#filters {
-				margin: 12px;
-				margin-top: 40px;
-			}
-			#filters > .filterline > label {
-				width: 100px;
-				margin: 4px 2px;
-			}
-			#filters > p {
-				font-size: 1.4em;
-				margin: 2px;
-			}
-			#help {
-				width: 60%;
-				min-width: 300px;
-				margin: 0 auto;
-				text-align: left;
-				font-size: 1.2em;
-			}
-		</style>
 	</head>
 	<body>
 		<h1 id="header">You are a...</h1>
