--- a/fontbox.html
+++ b/fontbox.html
@@ -4,44 +4,9 @@
 -->
 <html>
 	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<title>FontBox</title>
-		<style type="text/css">
-			body, .row, .box {
-				display: flex;
-				align-items: stretch;
-				justify-content: stretch;
-				align-content: stretch;
-				flex-wrap: nowrap;
-			}
-			.row, .box, textarea {
-				flex: 1 1 auto;
-			}
-			body {
-				height: calc(100vh - 16px);
-				margin: 0;
-				padding: 8px;
-				flex-direction: column;
-				background-color: grey;
-			}
-			.row {
-				width: 100%;
-				flex-direction: row;
-			}
-			.box {
-				position: relative;
-				flex-direction: row;
-			}
-			textarea {
-				resize: none;
-				font-size: 1.1em;
-				line-height: 1.1em;
-				min-height: 11em;
-				background-color: black;
-				border-color: silver;
-				color: silver;
-				font-family: auto;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="css/fontbox.css" />
 	</head>
 	<body>
 		<div class="row">
