--- a/dhook.html
+++ b/dhook.html
@@ -5,8 +5,8 @@
 -->
 <html>
 	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<title>Discord webhook interface</title>
-		<meta charset="UTF-8" />
 		<link rel="stylesheet" type="text/css" href="css/dhook.css" />
 		<script type="text/javascript" src="js/hosted/discord.stable.min.js"></script>
 		<script type="text/javascript" src="js/hosted/jscolor.js"></script>
