Clean niko.html
Fix meta content-type tag

--- a/niko.html
+++ b/niko.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<meta charset="UTF-8" />
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<!--
 			This font file is REQUIRED for the page to work. Rendering of text into
 			the generated image will not function properly without it, leaving the
