--- a/r-edit.html
+++ b/r-edit.html
@@ -6,9 +6,10 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<title>rEdit</title>
+		<link rel="stylesheet" type="text/css" href="css/basic-multibox.css" />
 		<link rel="stylesheet" type="text/css" href="css/r-edit.css" />
 	</head>
-	<body>
+	<body class="multibox">
 		<div class="row">
 			<div class="box">
 				<textarea id="lined" placeholder="Put the subreddit names here, separated by anything that ISN'T a letter, number, or underscore ('_')"></textarea>
