--- a/niko.html
+++ b/niko.html
@@ -45,7 +45,7 @@
 		<div id="leftbar" class="sidebar">
 			<h3>Welcome to NikoMaker!</h3>
 			<p>
-				This tool allows you to quickly create an image of Niko (the main character of <a href="https://store.steampowered.com/app/420530/OneShot/">Oneshot</a>) saying whatever you like, with any expression from the game!
+				This tool allows you to quickly create an image of Niko (the main character of <a href="https://store.steampowered.com/app/420530/OneShot/">OneShot</a>) saying whatever you like, with any expression from the game!
 			</p>
 			<p>
 				Hover over an element to get more information on it.
