--- a/fontbox.html
+++ b/fontbox.html
@@ -38,7 +38,7 @@
 				<textarea id="cursive" placeholder="This box will give you the text in cursive"></textarea>
 			</div>
 			<div class="box">
-				<textarea id="smallcaps" placeholder="This box will give you the text in small caps"></textarea>
+				<textarea id="sarcasm" placeholder="This box will give you the text in sarcasm-case"></textarea>
 			</div>
 		</div>
 		<script type="text/javascript" src="js/fontbox.browser.js"></script>
