--- a/r-edit.html
+++ b/r-edit.html
@@ -13,11 +13,12 @@
 		<div class="row">
 			<div class="box">
 				<textarea id="lined" placeholder="Put the subreddit names here, separated by anything that ISN'T a letter, number, or underscore ('_')"></textarea>
-				<a id="quickeditlink" title="This is a bookmarklet to quickly go from a multireddit page to an rEdit editor preloaded with the subreddits you were viewing." href="javascript:void location.assign(`https://gh.princessrtfm.com/r-edit.html#${location.pathname}`)">quick rEdit</a>
+				<span id="subcount" class="corner top"></span>
+				<a id="quickeditlink" class="corner bottom" title="This is a bookmarklet to quickly go from a multireddit page to an rEdit editor preloaded with the subreddits you were viewing." href="javascript:void location.assign(`https://gh.princessrtfm.com/r-edit.html#${location.pathname}`)">quick rEdit</a>
 			</div>
 			<div class="box">
 				<textarea id="collapsed" placeholder="This box will give you the multireddit collection"></textarea>
-				<a id="multireddit" href="">multireddit</a>
+				<a id="multireddit" class="corner bottom" href="">multireddit</a>
 			</div>
 		</div>
 		<script type="text/javascript" src="js/r-edit.browser.js"></script>
